tests/transpiler/x/scala/break_continue.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:40:16 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def main(args: Array[String]): Unit = {
    val numbers: ArrayBuffer[Int] = ArrayBuffer(1, 2, 3, 4, 5, 6, 7, 8, 9)
    for (n <- numbers) {
    if (n % 2 == 0) {
    continue
  }
    if (n > 7) {
    break
  }
    println(List("odd number:", n).mkString(" "))
  }
  }
}
